doc/_build/doctest/output.txt
Results of doctest builder run on 2016-07-19 14:37:37
=====================================================

Document: tutorial
------------------
1 items passed all tests:
   2 tests in default
2 tests in 1 items.
2 passed and 0 failed.
Test passed.

Document: guide
---------------
**********************************************************************
File "guide.rst", line 55, in default
Failed example:
    print t1 == t2
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python3.4/doctest.py", line 1318, in __run
        compileflags, 1), test.globs)
      File "/home/siva/cs224u_env/lib/python3.4/site-packages/sphinx/ext/doctest.py", line 370, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[4]>", line 1
        print t1 == t2
               ^
    SyntaxError: Missing parentheses in call to 'print'
**********************************************************************
File "guide.rst", line 57, in default
Failed example:
    print t1 == t3
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python3.4/doctest.py", line 1318, in __run
        compileflags, 1), test.globs)
      File "/home/siva/cs224u_env/lib/python3.4/site-packages/sphinx/ext/doctest.py", line 370, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[5]>", line 1
        print t1 == t3
               ^
    SyntaxError: Missing parentheses in call to 'print'
**********************************************************************
File "guide.rst", line 59, in default
Failed example:
    print t1.area()
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python3.4/doctest.py", line 1318, in __run
        compileflags, 1), test.globs)
      File "/home/siva/cs224u_env/lib/python3.4/site-packages/sphinx/ext/doctest.py", line 370, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[6]>", line 1
        print t1.area()
               ^
    SyntaxError: invalid syntax
**********************************************************************
File "guide.rst", line 61, in default
Failed example:
    print t1.scale(2.0).area()
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python3.4/doctest.py", line 1318, in __run
        compileflags, 1), test.globs)
      File "/home/siva/cs224u_env/lib/python3.4/site-packages/sphinx/ext/doctest.py", line 370, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[7]>", line 1
        print t1.scale(2.0).area()
               ^
    SyntaxError: invalid syntax
**********************************************************************
1 items had failures:
   4 of  10 in default
10 tests in 1 items.
6 passed and 4 failed.
***Test Failed*** 4 failures.

Doctest summary
===============
   12 tests
    4 failures in tests
    0 failures in setup code
    0 failures in cleanup code
